<resources>
    <string name="app_name">CIS298Assignment2</string>
    <string name="action_settings">Settings</string>

    //Radio Button Strings
    <string name="celsius_radio">Celsius</string>
    <string name="fahrenheit_radio">Fahrenheit</string>
    <string name="kelvin_radio">Kelvin</string>
    <string name="rankin_radio">Rankin</string>

    //Text Strings
    <string name="convert_text">Convert:</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:     </string>

    //Variable Strings
    <string name="result_text">Test</string>
    <string name="formula_text">Also Test</string>


</resources>
